--- a/qgc_linux/Dockerfile
+++ b/qgc_linux/Dockerfile
@@ -1,6 +1,6 @@
 FROM mavlink/qgc-build-linux:2019-02-03
 
-RUN apt update &\
+RUN apt update && \
     apt install -y rsync file
 RUN usermod -u 1040 user
 
