--- a/qgc_linux/Dockerfile
+++ b/qgc_linux/Dockerfile
@@ -3,6 +3,8 @@ FROM mavlink/qgc-build-linux:2019-02-03
 RUN apt update && \
     apt install -y rsync file
 RUN usermod -u 1040 user
+RUN groupmod -g 1040 user
+RUN usermod -g 1040 user
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
