--- a/qgc_linux/Dockerfile
+++ b/qgc_linux/Dockerfile
@@ -1,7 +1,8 @@
 FROM mavlink/qgc-build-linux:2019-02-03
 
 RUN apt update && \
-    apt install -y rsync file
+    apt install -y rsync file && \
+    apt install -y libcurl4-gnutls-dev
 RUN usermod -u 1040 user
 RUN groupmod -g 1040 user
 RUN usermod -g 1040 user
