--- a/qgc_android/Dockerfile
+++ b/qgc_android/Dockerfile
@@ -6,7 +6,10 @@ RUN     apt update && \
         apt install -y bzip2 && \
         apt install -y libcurl4-gnutls-dev:i386 && \
         curl -u $CREDENTIALS -O "http://192.168.2.144:8086/nexus/repository/gstreamer-android-qgroundcontrol/gstreamer/gstreamer-1.0-android-universal-1.14.4.tar.bz2" && \
-        tar jxf gstreamer-1.0-android-universal-1.14.4.tar.bz2 -C /
+        curl -u $CREDENTIALS -O "http://192.168.2.144:8086/nexus/repository/gstreamer-android-qgroundcontrol/curl-android-ios-cURL_7.60.0.tar.gz" && \
+        tar jxf gstreamer-1.0-android-unversal-1.14.4.tar.bz2 -C / && \
+        tar xvf curl-android-ios-cURL_7.60.0.tar.gz -C /
+
 RUN usermod -u 1040 user
 RUN groupmod -g 1040 user
 RUN usermod -g 1040 user
