--- a/qgc_linux/Dockerfile
+++ b/qgc_linux/Dockerfile
@@ -2,7 +2,8 @@ FROM mavlink/qgc-build-linux:2019-02-03
 
 RUN apt update && \
     apt install -y rsync file && \
-    apt install -y libcurl4-gnutls-dev
+    apt install -y libcurl4-gnutls-dev && \
+    apt-get install -y libssl-dev
 RUN usermod -u 1040 user
 RUN groupmod -g 1040 user
 RUN usermod -g 1040 user
